fix #1824 checkbox visibility

--- a/web/src/components/pages/datasets/subscribe.css
+++ b/web/src/components/pages/datasets/subscribe.css
@@ -95,9 +95,13 @@
             color: var(--blue);
         }
 
-        & input {
+        & .checkbox-container {
             border: 1.6px solid #f9f9f8;
             border-radius: 2px;
+        }
+
+        & .checkmark {
+            color: #f9f9f8;
         }
     }
 }
