--- a/web/src/components/ui/ui.css
+++ b/web/src/components/ui/ui.css
@@ -140,21 +140,32 @@ button.card-action:focus.focus-visible path {
 
     & .checkbox-container {
         flex-shrink: 0;
-        margin: 7px 10px 0 0;
+        margin-top: 5px;
+        margin-inline-end: 10px;
         position: relative;
+        border: 1.6px solid var(--near-black);
+        border-radius: 2px;
+        width: 15px;
+        height: 15px;
+        box-sizing: border-box;
     }
 
     & input {
-        width: 15px;
-        height: 15px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         appearance: none;
     }
 
     & .checkmark {
         display: none;
         position: absolute;
-        left: 4.7px;
-        top: -2.05px;
+        left: -2px;
+        top: -8px;
+        font-size: 19px;
+        color: var(--near-black);
     }
 
     & input:checked ~ .checkmark {
